Fix flex-wrap issue in app-container

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .app-container {
@@ -27,9 +32,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 5%;
+  padding: 0;
   margin: 20px;
-  height: 90vh; /* Set height to be the same as the viewport */
+  height: 100vh; /* Set height to be the same as the viewport */
+  flex-wrap: wrap;
 }
 
 
@@ -40,6 +46,9 @@ body {
   margin: 3%;
   max-width: 100%;
   width: 400px;
+  max-height: 100%;
+  min-height: 20%;
+  height: 150px;
   padding: 3%;
   border-radius: 10px;
   flex-direction: column;
